--- a/src/assets/style/App.sass
+++ b/src/assets/style/App.sass
@@ -2,16 +2,35 @@
 header
     width: 100vw
     padding: auto
-nav
-    display: flex
-    justify-content: space-between
-    width: 30vw
-    padding: 10px
-    margin: auto
-    a
-        font-weight: 500
-        text-decoration: inherit
-        color: #646cff
-        font-size:  1.4em 
-    a:hover
-        color: #535bf2
+
+@media ( max-width: 1300px)
+    nav
+        display: flex
+        justify-content: space-around
+        padding: 10px
+        margin: auto
+        a
+            font-weight: 500
+            text-decoration: inherit
+            color: #646cff
+            font-size:  1.4em 
+        a:hover
+            color: #535bf2
+
+@media ( min-width: 1300px)
+    nav
+        display: flex
+        justify-content: space-between
+        width: 30vw
+        padding: 10px
+        margin: auto
+        a
+            font-weight: 500
+            text-decoration: inherit
+            // color: #646cff
+            color: #ffffff
+            font-size:  1.4em 
+            transition: color 0.3s ease
+        a:hover
+            // color: #535bf2   
+            color: #6d6d6d         
