--- a/src/assets/style/Participants.sass
+++ b/src/assets/style/Participants.sass
@@ -24,7 +24,8 @@
 
 .top-block
     display: flex
-    justify-content: space-between
+    // justify-content: space-between
+    justify-content: space-around
     width: 80vw
     max-width: 1800px
     margin: auto
